# docpipe

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.full.yml  docker-compose.yml  docpipe.example.yaml  pyproject.toml  run.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  publish.yml
.vercel/: project.json
docs/superpowers/plans/: 2026-04-26-api-completeness.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  graph.html  graph.json
scripts/: release.sh
site/: index.html  next.config.ts  package-lock.json  package.json  vercel.json
site/app/: globals.css  layout.tsx  page.tsx
site/components/: CodeBlock.tsx  FeaturesSection.tsx  Footer.tsx  Hero.tsx  Nav.tsx  PipelineSection.tsx  Playground.tsx  Providers.tsx  RAGSection.tsx  UsageSection.tsx
site/lib/: theme.ts
src/docpipe/: __init__.py
src/docpipe/cli/: main.py
src/docpipe/config/: __init__.py  loader.py  settings.py
src/docpipe/core/: errors.py  extractor.py  parser.py  pipeline.py  types.py
src/docpipe/eval/: __init__.py  pipeline.py
src/docpipe/extractors/: langchain_extractor.py  langextract_extractor.py
src/docpipe/ingestion/: pipeline.py
src/docpipe/parsers/: docling_parser.py  glm_ocr_parser.py
src/docpipe/rag/: __init__.py  pipeline.py
src/docpipe/registry/: registry.py
src/docpipe/server/: app.py  auth.py  homepage.py
tests/: conftest.py
tests/unit/: test_api.py  test_config.py  test_eval.py  test_glm_ocr.py  test_improvements.py  test_ingestion.py  test_metadata_filtering.py  test_pipeline.py  test_rag.py  test_rag_stream.py  test_registry.py  test_types.py
