[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "docpipe-sdk"
version = "0.4.2"
description = "Unified document parsing, structured extraction, vector ingestion, and RAG pipeline SDK"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Sunny Sinha", email = "thesunnysinha@gmail.com" }]
keywords = ["document", "parsing", "extraction", "llm", "pipeline", "vector", "ingestion", "rag", "docling", "langextract", "langchain", "pgvector", "embeddings", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "langchain-core>=0.3",
    "langchain-text-splitters>=0.3",
]

[project.optional-dependencies]
docling = ["docling>=2.0"]
glm-ocr = ["glmocr>=0.1"]
langextract = ["langextract>=0.1"]
openai = ["langchain-openai>=0.3"]
anthropic = ["langchain-anthropic>=0.3"]
google = ["langchain-google-genai>=2.0"]
ollama = ["langchain-ollama>=0.3"]
huggingface = ["langchain-huggingface>=0.1"]
pgvector = ["langchain-postgres>=0.0.12", "psycopg2-binary>=2.9"]
server = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "python-multipart>=0.0.6"]
rag = ["langchain-community>=0.3", "langchain-classic>=0.1", "rank-bm25>=0.2"]
rerank = ["flashrank>=0.2"]
all = ["docpipe-sdk[docling,glm-ocr,langextract,openai,anthropic,google,ollama,pgvector,server,rag,rerank]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov",
    "ruff",
    "mypy",
    "httpx",
]

[project.scripts]
docpipe = "docpipe.cli.main:cli"

[project.entry-points."docpipe.parsers"]
docling = "docpipe.parsers.docling_parser:DoclingParser"
glm-ocr = "docpipe.parsers.glm_ocr_parser:GLMOCRParser"

[project.entry-points."docpipe.extractors"]
langextract = "docpipe.extractors.langextract_extractor:LangExtractExtractor"
langchain = "docpipe.extractors.langchain_extractor:LangChainExtractor"

[project.urls]
Homepage = "https://docpipe.sunnysinha.online"
Documentation = "https://docpipe.sunnysinha.online"
Repository = "https://github.com/thesunnysinha/docpipe"
"Bug Tracker" = "https://github.com/thesunnysinha/docpipe/issues"
Changelog = "https://github.com/thesunnysinha/docpipe/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/docpipe"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "requires_docling: needs docling installed",
    "requires_langextract: needs langextract installed",
    "requires_langchain: needs langchain provider installed",
    "requires_pgvector: needs pgvector DB available",
    "requires_api_key: needs LLM API key configured",
    "requires_rag: needs rag extra, DB, and API key available",
]
